k8s/db-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: db-server
  name: db-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/server-backend-network: "true"
        io.kompose.service: db-server
    spec:
      containers:
        - env:
            - name: MYSQL_ROOT_PASSWORD
              value: "123456789"
            - name: TEST
              value: test
          image: mysql:latest
          name: db-server
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db1-data
      restartPolicy: Always
      volumes:
        - name: db1-data
          persistentVolumeClaim:
            claimName: db1-data
status: {}
