k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      labels:
        io.kompose.network/server-backend-network: "true"
        io.kompose.service: web
    spec:
      containers:
        - env:
            - name: TEST
              value: test
            - name: db_host
              value: db-server
            - name: db_name
              value: expressjs
            - name: db_password
              value: "123456789"
            - name: db_user
              value: root
          image: vanillaskys/web
          name: web
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
