k8s/server-backend-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server-backend-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/server-backend-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/server-backend-network: "true"
